--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/Achal/Desktop/facebook/page post/poi-3.8-beta3.jar/poi-3.8-beta3.jar"/>
+	<classpathentry kind="lib" path="D:/java work/web_application/restfb-1.42.0.jar"/>
+	<classpathentry kind="lib" path="D:/java work/web_application/poi-3.8-beta3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
